Networking Policies/step-5-np-test-b-default-egress-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-test-b-default-egress-deny-policy
  namespace: np-test-b
spec:
  podSelector: {}
  policyTypes:
  - Egress
